working in mi paginas

--- a/src/app/captura-de-venta/captura-de-venta.component.html
+++ b/src/app/captura-de-venta/captura-de-venta.component.html
@@ -1,5 +1,8 @@
-<div class=" container-fluid d-flex border-bottom p-3 align-items-baseline">
-    <h2>Capture de venta</h2>
+<div class=" container-fluid d-flex border-bottom p-3 justify-content-between align-items-baseline">
+    <div class="d-flex align-items-baseline">
+        <h2>Capture de Venta</h2>
+          </div>
+    <img src="../../assets/images/icons/info.png" width="25" height="25" class="m-3" title="More info..." alt="">
 </div>
 
 <div class="main p-3 container-fluid">
