--- a/src/app/mi-diagrama/mi-diagrama.component.html
+++ b/src/app/mi-diagrama/mi-diagrama.component.html
@@ -1,3 +1,11 @@
-<div class=" container-fluid d-flex border-bottom p-3 align-items-baseline">
-    <h2>Mi Diagrama</h2>
+<div class=" container-fluid d-flex border-bottom p-3 justify-content-between align-items-baseline">
+    <div class="d-flex align-items-baseline">
+        <h2>Mi Diagrama</h2>
+        <h5 class="ms-3 title greytext">Administracion de perfile</h5>
+    </div>
+    <img src="../../assets/images/icons/info.png" width="25" height="25" class="m-3" title="More info..." alt="">
+</div>
+
+<div class="container-fluid ">
+    <img src="../../assets/images/backgrounds/midiagramabg.png" style="width: 100%; height: 100%;" alt="">
 </div>
