--- a/src/app/miperfile/miperfile.component.html
+++ b/src/app/miperfile/miperfile.component.html
@@ -183,7 +183,7 @@
             </div>
             <div class="d-flex align-items-center mb-3">
                 <a href="#" class="text-decoration-none">See All</a>
-                <img src="../../assets/images/icons/info.png" width="25" height="25" class="ms-3" alt="">
+                <img src="../../assets/images/icons/info.png" width="25" height="25" class="ms-3" title="More info..." alt="">
             </div>
         </div>
         <div class="top20 d-flex justify-content-center align-items-center p-3">
