mis paginas ready

--- a/src/app/agrigar-hijos/agrigar-hijos.component.html
+++ b/src/app/agrigar-hijos/agrigar-hijos.component.html
@@ -39,62 +39,62 @@
             </div>
         </div>
 
-<!-- table  -->
+        <!-- table  -->
 
-<!-- sorting data and buttons need API and some logic
+        <!-- sorting data and buttons need API and some logic
 angular material sorting is installed and ready to use -->
 
-<div class=" d-flex justify-content-center">
-    <table class="table table-striped my-3">
-        <tr style="background-color: #FDFDFD;">
-            <th>Fecha Entreviste <i class="bi bi-arrow-down-up"></i></th>
-            <th>Tipo Empleado <i class="bi bi-arrow-down-up"></i></th>
-            <th>Nombre <i class="bi bi-arrow-down-up"></i></th>
-            <th>Telefono <i class="bi bi-arrow-down-up"></i></th>
-            <th>Fecha Necimiento <i class="bi bi-arrow-down-up"></i></th>
-            <th>Reclutador <i class="bi bi-arrow-down-up"></i></th>
-        </tr>
-        <tr>
-            <td>72.3</td>
-            <td>23/01/2024</td>
-            <td>MX350.00</td>
-            <td>24/01/2024</td>
-            <td>MX350.00</td>
-            <td><a>Estatus</a></td>
-        </tr>
-        <tr>
-            <td>72.3</td>
-            <td>23/01/2024</td>
-            <td>MX350.00</td>
-            <td>24/01/2024</td>
-            <td>MX350.00</td>
-            <td><a>Estatus</a></td>
-        </tr>
-        <tr>
-            <td>72.3</td>
-            <td>23/01/2024</td>
-            <td>MX350.00</td>
-            <td>24/01/2024</td>
-            <td>MX350.00</td>
-            <td><a>Estatus</a></td>
-        </tr>
-        
-    </table>
+        <div class=" d-flex justify-content-center">
+            <table class="table table-striped my-3">
+                <tr style="background-color: #FDFDFD;">
+                    <th>Fecha Entreviste <i class="bi bi-arrow-down-up"></i></th>
+                    <th>Tipo Empleado <i class="bi bi-arrow-down-up"></i></th>
+                    <th>Nombre <i class="bi bi-arrow-down-up"></i></th>
+                    <th>Telefono <i class="bi bi-arrow-down-up"></i></th>
+                    <th>Fecha Necimiento <i class="bi bi-arrow-down-up"></i></th>
+                    <th>Reclutador <i class="bi bi-arrow-down-up"></i></th>
+                </tr>
+                <tr>
+                    <td>72.3</td>
+                    <td>23/01/2024</td>
+                    <td>MX350.00</td>
+                    <td>24/01/2024</td>
+                    <td>MX350.00</td>
+                    <td><a>Estatus</a></td>
+                </tr>
+                <tr>
+                    <td>72.3</td>
+                    <td>23/01/2024</td>
+                    <td>MX350.00</td>
+                    <td>24/01/2024</td>
+                    <td>MX350.00</td>
+                    <td><a>Estatus</a></td>
+                </tr>
+                <tr>
+                    <td>72.3</td>
+                    <td>23/01/2024</td>
+                    <td>MX350.00</td>
+                    <td>24/01/2024</td>
+                    <td>MX350.00</td>
+                    <td><a>Estatus</a></td>
+                </tr>
 
-</div>
-<div class="d-flex justify-content-between">
-    <button class="chartnav prev" type="button">
-        << Previous</button>
-<div>
-<ul class="pagination">
-    <li class="page-item"><a class="page-link" href="#"><<</a></li>
-    <li class="page-item"><a class="page-link" href="#"><</a></li>
-    <li class="page-item"><a class="page-link" style="color: black;" href="#">1</a></li>
-    <li class="page-item"><a class="page-link" href="#">></a></li>
-    <li class="page-item"><a class="page-link" href="#">>></a></li>
-  </ul>
-</div>
+            </table>
+
+        </div>
+        <div class="d-flex justify-content-between">
+            <button class="chartnav prev" type="button">
+                &#60;&#60; Previous</button>
+            <div>
+                <ul class="pagination">
+                    <li class="page-item"><a class="page-link" href="#">&#60;&#60;</a></li>
+                    <li class="page-item"><a class="page-link" href="#">&#60;</a></li>
+                    <li class="page-item"><a class="page-link" style="color: black;" href="#">1</a></li>
+                    <li class="page-item"><a class="page-link" href="#">></a></li>
+                    <li class="page-item"><a class="page-link" href="#">>></a></li>
+                </ul>
+            </div>
 
             <button class="chartnav next" type="button"> Next >> </button>
-</div>
-</div>
+        </div>
+    </div>
