starting mi ingresos

--- a/src/app/mis-paginas/mis-paginas.component.html
+++ b/src/app/mis-paginas/mis-paginas.component.html
@@ -1,4 +1,4 @@
-<div class=" container-fluid d-flex border-bottom p-3 justify-content-between align-items-baseline">
+<div class=" container-fluid d-flex border-bottom p-2 mx-5 justify-content-between align-items-baseline">
   <div class="d-flex align-items-baseline">
     <h2>Mi Paginas</h2>
   </div>
