--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -51,7 +51,7 @@
         </li>
 
         <li class="nav-item">
-            <a class="nav-link text-white" routerLink="/builder" routerLinkActive="active">
+            <a class="nav-link text-white" routerLink="miIngresos" routerLinkActive="active">
                 <img src="../../assets/images/icons/Vector (2).png" width="16" height="16" class="me-2"
                     alt="user icon">Mis Ingresos
             </a>
