--- a/src/styles.css
+++ b/src/styles.css
@@ -57,5 +57,9 @@ input {
     border-radius: 50%;
 }
 
+
+.bi {
+    background-color: transparent !important;
+}
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
