--- a/src/app/sidebar/sidebar.component.css
+++ b/src/app/sidebar/sidebar.component.css
@@ -21,6 +21,7 @@ li a:hover, .nav-pills .nav-link.active {
 }
 .search{
 border-radius: 0px 50px 50px 0px;
-background-color: rgba(255, 255, 255, 0.6);
+border: none;
+background-color: rgba(255, 255, 255, 0.6) !important;
 
 }
