--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -32,9 +32,9 @@
     </div>
   </div>
 
-  <!-- icons  -->
+  <!-- rightside icons  -->
   <div class="d-flex align-items-center">
-
+<!-- theme toggle  -->
     <div class="app-navbar-item me-3">
       <label class="switch">
         <input type="checkbox">
@@ -64,12 +64,18 @@
       <img src="../../assets/images/icons/notification.png" height="18" width="18" />
       <span class="badge">1</span>
     </a>
-
-    <div class="app-navbar-item d-flex align-items-center">
-      <img src="../../assets/images/avatar/Ellipse 1.png" />
-      <p>Andrea</p>
-      <img src="../../assets/images/icons/arrow.png" height="18" width="18" />
+<!-- login button  -->
+    <div class="dropdown">
+    <button type="button" class="but dropdown-toggle d-flex align-items-center pe-2 text-light-emphasis" data-bs-toggle="dropdown">
+      <img class="rounded-circle me-2" width="30" height="30" src="../../assets/images/avatar/Ellipse 1.png" alt="">
+      Andrea
+      <a href="#"><i class="bi bi-chevron-down fs-5 text-black mx-2"></i></a>
+    </button>
+      <div class="dropdown-menu">
+        Login form
+      </div>
     </div>
+  
 
   </div>
 </div>
