using angular material for sidebar toggle

--- a/src/app/miperfile/miperfile.component.html
+++ b/src/app/miperfile/miperfile.component.html
@@ -378,7 +378,7 @@
                 <div class="m-2 p-2 d-flex">
                     <img src="../../assets/images/circle graph.png" width="121" height="121" class="me-3" alt="">
                     <div>
-                        <p><span class="circlebadge me-3" style="background-color: #33b5ff; color: #33b5ff;">
+                        <p><span class="circlebadge  rounded-circle me-3" style="background-color: #33b5ff; color: #33b5ff;">
                                 ....</span> Instaldo ultimos 30 Dias</p>
                         <p class="h6"><span class="circlebadge me-3" style="background-color: #fff;"> </span>
                             MX30,750,00</p>
