--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,2 @@
-<div class="row">
-<div class="col-3 p-0">
-  <app-sidebar></app-sidebar>
-</div>
-<div class="col-9 p-0">
-  <app-header></app-header>
-  <router-outlet></router-outlet>
-</div>
-</div>
+
+<app-pokoa></app-pokoa>
